# Ruka-Chess

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
src/evaluation/: alpha_beta.rs  evaluations.rs  mod.rs  move_ordering.rs  piece_count_eval.rs  search_optimisation.rs
src/evaluation/piece_square_tables/: eg_piece_square_table.rs  mg_piece_square_table.rs  mod.rs
src/evaluation/position_tables/: mod.rs
src/evaluation/search_improvements/: mod.rs  principal_variation_search.rs  quiescent_search.rs
src/interface/: uci.rs
src/search/: alpha_beta.rs  mod.rs  move_ordering.rs
src/search/search_improvements/: lmp.rs  lmr.rs  mod.rs  quiescent_search.rs  zobrist_hash.rs
